<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">How Much To Pay</string>
    <string name="menu_settings">Settings</string>
    <string name="investment_hint">0.00</string>
    <string name="investment_text">Investment Value</string>
    <string name="fee_text">Fee to pay to investor (%)</string>
    <string name="fee_hint">0.00</string>
    <string name="calculate_text">Calculate</string>
    <string name="result_text">0.00</string>
    <string name="amount_warn">Enter a valid decimal number in Amount</string>
    <string name="fee_warn">Enter a valid decimal number in Fee</string>
    <string name="settings_greet">Hello from Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_back">Back</string>
    <string name="share_to">Share to..</string>
    <string name="share_text">You need to pay $$1 for amount of $$2 with fee of $$3%</string>
    <string name="menu_license">License</string>
    <string name="ok_text">OK</string>
    <string name="menu_overflow">overflow</string>

</resources>